@@ -23,6 +23,7 @@
   *  - Added new CDC_Device_Flush() command to the device mode CDC Class driver
   *  - Added explicit attribute masks to the device mode demos' descriptors
   *  - Added return values to the CDC and MIDI class driver transmit functions
+  *  - Added extra masks to the SPI driver, changed SPI_Init() so that the clock polarity and sample modes can be set
   *
   *  <b>Fixed:</b>
   *  - Fixed possible lockup in the CDC device class driver, when the host sends data that is a multiple of the
